--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -18,8 +18,19 @@ nav:
     - Development: 'development.md'
     - User manual: 'user_manual.md'
     - Code Reference: 
+      - Overview: reference.md
       - Modules:
         - foo: reference/foo-reference.md
+        - control: reference/control-reference.md
+        - datasets: reference/datasets-reference.md
+        - fitting: reference/fitting-reference.md
+        - imaging: reference/imaging-reference.md
+        - optics: reference/optics-reference.md
+        - plot: reference/plot-reference.md
+        - datasets: reference/datasets-reference.md
+        - signals: reference/signals-reference.md
+
+
 #      - Coverage report: coverage.md
 
 copyright: Light Conversion, UAB
