--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -27,12 +27,8 @@ nav:
         - imaging: reference/imaging-reference.md
         - optics: reference/optics-reference.md
         - plot: reference/plot-reference.md
-        - datasets: reference/datasets-reference.md
         - signals: reference/signals-reference.md
-
-
-#      - Coverage report: coverage.md
-
+      - Coverage report: htmlcov/coverage.html
 copyright: Light Conversion, UAB
 use_directory_urls: false
 
@@ -44,9 +40,9 @@ plugins:
   - offline
   - render_swagger
   - section-index
-#  - coverage:
-#      page_name: coverage
-#      html_report_dir: htmlcov
+  # - coverage:
+  #     page_name: coverage
+  #     html_report_dir: ../htmlcov
   - mkdocstrings:
       handlers:
         python:
