added Python 3.11 option for linux

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,9 @@ strategy:
     linuxPython37:
       imageName: 'ubuntu-latest'
       python.version: '3.7'
+    linuxPython311:
+      imageName: 'ubuntu-latest'
+      python.version: '3.11'
     windowsPython311:
       imageName: 'windows-latest'
       python.version: '3.11'
