Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,7 +63,7 @@ steps:
 - script: |
     python -m twine upload -r LCURS --config-file $(PYPIRC_PATH) dist/*.whl
     azcopy sync "$(Build.SourcesDirectory)\doc\site" "https://lightconupdater.blob.core.windows.net/documentation/$(targetName)/$(DocumentationStorageSAS)" --recursive=true
-  condition: and(succeeded(), and(eq(variables['imageName'], 'windows-latest'), and(eq(variables['python.version'], '3.11'), eq(variables.isMaster, 'false'))))
+  condition: and(succeeded(), and(eq(variables['imageName'], 'windows-latest'), and(eq(variables['python.version'], '3.11'), eq(variables.isMaster, 'True'))))
 
 #- script : azcopy sync "$(System.DefaultWorkingDirectory)" "https://lightconupdater.blob.core.windows.net/firmware$(FirmwaresStorageSAS)" --recursive=true --delete-destination=true  --exclude-path=".git;deploy;azure-pipelines.yml"
   #displayName: Sync firmwares with Azure Storage Blob
