Added toolbox_materials.pkl and updating script

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include MANIFEST.in
 # Include recursively
 recursive-include scilightcon *.csv
 recursive-include scilightcon *.json
+recursive-include scilightcon *.pkl
 
 #Exclude
 prune */__pycache__
