Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,10 +59,16 @@ steps:
   displayName: 'Authenticate to Twine'
 
 - task: TwineAuthenticate@1
-  condition: and(succeeded(), eq(variables.isMaster, 'true'))
+  condition: and(succeeded(), eq(variables.isMaster, 'false'))
   inputs:
     pythonUploadServiceConnection: 'scilightcon test PyPi'
-  displayName: 'Authenticate to test service connection'
+  displayName: 'Authenticate to test PyPI service connection'
+
+- task: TwineAuthenticate@1
+  condition: and(succeeded(), eq(variables.isMaster, 'true'))
+  inputs:
+    pythonUploadServiceConnection: 'scilightcon PyPi'
+  displayName: 'Authenticate to PyPI service connection'
 
 - script: |
     pip install -e .
@@ -80,12 +86,13 @@ steps:
   displayName: 'Upload documentation'
 
 - script: |
-    python -m twine upload -r LCURS --config-file $(PYPIRC_PATH) dist/*.whl
-  condition: and(succeeded(), and(eq(variables['imageName'], 'windows-latest'), and(eq(variables['python.version'], '3.11'), eq(variables.isMaster, 'True'))))
-  displayName: 'Publish wheel artifact'
+    type $(PYPIRC_PATH)
+    python -m twine upload -r "scilightcon" --config-file $(PYPIRC_PATH) dist/* --verbose
+  condition: and(succeeded(), and(eq(variables['python.version'], '3.11'), eq(variables.isMaster, 'false')))
+  displayName: 'Upload to test PyPI'
 
 - script: |
     type $(PYPIRC_PATH)
     python -m twine upload -r "scilightcon" --config-file $(PYPIRC_PATH) dist/* --verbose
   condition: and(succeeded(), and(eq(variables['python.version'], '3.11'), eq(variables.isMaster, 'true')))
-  displayName: 'Upload to test PyPI'
+  displayName: 'Upload to PyPI'
