Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -88,11 +88,11 @@ steps:
 - script: |
     type $(PYPIRC_PATH)
     python -m twine upload -r "scilightcon" --config-file $(PYPIRC_PATH) dist/* --verbose
-  condition: and(succeeded(), and(eq(variables['python.version'], '3.11'), eq(variables.isMaster, 'false')))
+  condition: and(succeeded(), and(eq(variables['imageName'], 'windows-latest'), and(eq(variables['python.version'], '3.11'), eq(variables.isMaster, 'False'))))
   displayName: 'Upload to test PyPI'
 
 - script: |
     type $(PYPIRC_PATH)
     python -m twine upload -r "scilightcon" --config-file $(PYPIRC_PATH) dist/* --verbose
-  condition: and(succeeded(), and(eq(variables['python.version'], '3.11'), eq(variables.isMaster, 'true')))
+  condition: and(succeeded(), and(eq(variables['imageName'], 'windows-latest'), and(eq(variables['python.version'], '3.11'), eq(variables.isMaster, 'True'))))
   displayName: 'Upload to PyPI'
