--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -26,7 +26,7 @@ nav:
       - fitting: reference/fitting-reference.md
       #- imaging: reference/imaging-reference.md
       - optics: reference/optics-reference.md
-      #- plot: reference/plot-reference.md
+      - plot: reference/plot-reference.md
       - utils: reference/utils-reference.md
       #- signals: reference/signals-reference.md
     #- Coverage report: htmlcov/coverage.html
