--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy<2.0
-matplotlib
+numpy>2.0
+matplotlib>=3.8.4
 pytest
 typing_extensions
-scipy
+scipy>=1.13.0
 pickle-mixin
 msgpack
-pandas
+pandas>=2.2.2
 xlrd
 Pillow
