--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,10 +14,13 @@ strategy:
       python.version: '3.11'
     linuxPython37:
       imageName: 'ubuntu-latest'
-      python.version: '3.7'
+      python.version: '3.13'
     windowsPython311:
       imageName: 'windows-latest'
       python.version: '3.11'
+     windowsPython313:
+      imageName: 'windows-latest'
+      python.version: '3.13'
 
 pool:
   vmImage: $(imageName)
